<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package</description>

  <maintainer email="your-email@something.com">Your Name</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>amcl</build_depend> <!-- Added -->
  <build_depend>map_server</build_depend> <!-- Added -->
  <build_depend>move_base</build_depend> <!-- Added -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend> <!-- Added -->
  <exec_depend>map_server</exec_depend> <!-- Added -->
  <exec_depend>move_base</exec_depend> <!-- Added -->

  <export>
  </export>
</package>
